--- a/frontend/src/components/CardProducts/CardProducts.css
+++ b/frontend/src/components/CardProducts/CardProducts.css
@@ -11,7 +11,6 @@
   width: auto;
 }
 
-
 .card {
   width: auto;
   background-color: #ffffff;
@@ -20,12 +19,11 @@
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-
 .product-image {
+  padding: 40px 40px 0 40px;
   width: auto;
-  height: auto;
-  object-fit: contain;
-
+  height: 240px;
+  object-fit: cover;
 }
 
 .card-content {
@@ -49,6 +47,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 .title-price h3 {
@@ -61,10 +61,10 @@
   font-size: 18px;
 }
 
-
 .description {
   font-size: 14px;
   margin-top: 10px;
   color: #555;
   line-height: 1.5;
+  margin-left: 10px;
 }
